--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,26 +1,22 @@
-# Make sure this is set to "kotlinforforge"
 modLoader="kotlinforforge"
-# Make sure this is set to the appropriate version range
-loaderVersion="[1.9,)" # Require at least 1.9.x
-# License is REQUIRED after 1.16
-license='LGPLv2.1 or later'
+loaderVersion="[1.9,)"
+license='AGPLv3'
 
 [[mods]]
-modId="examplemod"
+modId="mesagisto"
 version="${file.jarVersion}"
-displayName="ExampleMod"
-credits="The ExampleMod dev team"
-authors="ExampleModAuthor"
+displayName="MesagistoMod"
+authors="Itsusinn"
 description='''
 Example mod that uses Kotlin for Forge.
 '''
-[[dependencies.examplemod]]
+[[dependencies.mesagisto]]
     modId="forge"
     mandatory=true
     versionRange="[36,)"
     ordering="NONE"
     side="BOTH"
-[[dependencies.examplemod]]
+[[dependencies.mesagisto]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.12.2,)"
